이메일 로그인, 토큰 권한 내포